Update PaymentServlet.java